<resources>
    <!-- App values -->
    <string name="app_name">Paperless 5e</string>

    <!-- Android stuff (font names) -->
    <string name="font_family_medium">sans-serif</string>

    <!-- Content Description Strings -->
    <string name="description_weapon_dice">Select weapon dice</string>

    <!-- General purpose -->
    <string name="single_dash">-</string>
    <string name="add">Add</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="standard_value">gp</string>
    <string name="standard_weight">lb</string>
    <string name="standard_weight_format">%1$d lbs</string>
    <string name="standard_distance">feet</string>
    <string name="plus">+</string>
    <string name="delete">delete</string>

    <!-- Navigation -->
    <string name="nav_stats_title">Stats</string>
    <string name="nav_offense_title">Weapons</string>
    <string name="nav_defense_title">Defense</string>
    <string name="nav_bio_title">Biography</string>
    <string name="nav_spells_title">Spells</string>
    <string name="nav_character_title">Stats and Info</string>
    <string name="nav_spells">Spell List</string>
    <string name="nav_biography">Biography</string>
    <string name="nav_equipment">Equipment</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_add_weapon_title">Add Weapon</string>
    <string name="nav_edit_weapon_title">Edit Weapon</string>
    <string name="nav_add_spell_title">Add Spell</string>
    <string name="nav_edit_spell_title">Edit Spell</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_xp_button_text">%1$d XP</string>

    <string name="dialog_add_xp_title">Add XP</string>
    <string name="dialog_add_xp_change">Change</string>
    <string name="dialog_add_xp_hint">XP Earned</string>
    <string name="dialog_change_xp_title">Change XP</string>
    <string name="dialog_change_xp_accept">Update</string>
    <string name="dialog_change_xp_hint">Total XP</string>

    <!-- Activity -->
    <string name="character_info_class_format">Level %1$d %2$s</string>
    <string name="toolbar_character_format">"%1$s   (%2$s level %3$s)"</string>

    <!-- Offense page -->
    <string name="offense_main_hand">Main Hand</string>
    <string name="offense_off_hand">Off Hand</string>
    <string name="offense_proficiency_summary">Proficiency Bonus: %1$d</string>

    <!-- Content descriptions -->
    <string name="cd_weapon_icon">Weapon Icon</string>
    <string name="cd_navigatoin">Navigation</string>

    <!-- Stat component -->
    <string name="stat_default_value">10</string>

    <!-- Stat fragment -->
    <string name="stat_name_str">STR</string>
    <string name="stat_name_con">CON</string>
    <string name="stat_name_dex">DEX</string>
    <string name="stat_name_int">INT</string>
    <string name="stat_name_wis">WIS</string>
    <string name="stat_name_cha">CHA</string>
    <string name="stat_name_hp">HP</string>
    <string name="stat_name_max_hp">Max HP</string>
    <string name="stat_name_tmp_hp">Temp HP</string>
    <string name="stat_health_summary_format">%1$d / %2$d</string>
    <string name="stat_health_summary_title">Effective HP</string>
    <string name="stat_health_hit_dice_title">Hit Dice</string>
    <string name="stat_health_hit_dice_roll">Roll</string>
    <string name="stat_ability_score_modifier_format">%1$s</string>
    <string name="stat_speed_format">Speed: %1$d ft.</string>
    <string name="stat_initiative_format">Initiative: %1$s</string>
    <string name="stat_inspired">Inspiration</string>
    <string name="stat_title_health">Health</string>
    <string name="stat_title_ability_scores">Ability Scores</string>
    <string name="dice_text_indicator">[%1$d]</string>

    <!-- Skills -->
    <string name="skill_button_text_format">%1$s: %2$s%3$d</string>
    <string name="skill_name_perception">Perception</string>
    <string name="skill_name_wisdom">Wisdom</string>
    <string name="skill_add_new">New Skill</string>
    <string name="stat_skill_passive_wisdom_format">Passive %1$s: %2$s%3$d</string>
    <string name="skill_new_accept">Add Skill</string>
    <string name="skill_new_cancel">Cancel</string>
    <string name="skill_add_update">Update Skill</string>
    <string name="skill_update_accept">Update</string>
    <string name="skill_update_remove">Delete</string>
    <string name="skill_hint_name">Name</string>
    <string name="skill_hint_value">Value</string>

    <!-- Dice -->
    <string name="dice_picker_accept">Accept</string>
    <string name="dice_picker_title">Pick a dice type</string>

    <!-- Toast messages -->
    <string name="toast_max_hp_updated_format">Your max health has increased by %1$d!</string>
    <string name="toast_skill_already_exists">This skill already exists.</string>
    <string name="toast_skill_removed">You no longer have that skill.</string>
    <string name="toast_skill_updated">%1$s updated.</string>

    <!-- Death component -->
    <string name="death_message_title">You have died!</string>
    <string name="death_message_description">You failed all your death saving throws, and have died a terrible death. Rest in peace, adventurer. :(</string>
    <string name="death_message_accept">Mourn</string>
    <string name="death_save_success">Success</string>
    <string name="death_save_section_title">Death Saves</string>

    <!-- Edit Character screen -->
    <string name="edit_hint_name">Name</string>
    <string name="edit_hint_race">Race</string>
    <string name="edit_hint_class">Class</string>
    <string name="edit_hint_level">Level</string>
    <string name="edit_hint_speed">Speed</string>
    <string name="edit_activity_label">Edit Character</string>

    <!-- Add/Edit Weapon screen -->
    <string name="add_weapon_attack_modifier">Attack Modifier</string>
    <string name="add_weapon_attack_proficiency">Proficiency Bonus</string>
    <string name="add_weapon_damage_summary">Damage Summary</string>
    <string name="add_weapon_dice_multiplier_hint">X Dice</string>
    <string name="add_weapon_modifier_hint">Modifier</string>
    <string name="add_weapon_weapon_name_hint">Weapon Name</string>
    <string name="add_weapon_properties_hint">Properties</string>
    <string name="add_weapon_magic_bonus_hint">Magic Bonus</string>
    <string name="add_weapon_damage_ability_hint">Ability Modifier</string>
    <string name="add_weapon_damage_title">Weapon Damage</string>
    <string name="add_weapon_stats_title">Weapon Information</string>
    <string name="add_weapon_properties_title">Weapon Properties</string>
    <string name="add_weapon_hand_chooser_title">Select Hand</string>
    <string name="add_weapon_hand_main">Main Hand</string>
    <string name="add_weapon_hand_off">Off Hand</string>
    <string name="add_weapon_weight">Weight (lb)</string>
    <string name="add_weapon_value">Value (gp)</string>
    <string name="add_weapon_str_format">STR (%1$s)</string>
    <string name="add_weapon_dex_format">DEX (%1$s)</string>

    <!-- Spells -->
    <string name="spell_header_zero">Cantrips</string>
    <string name="spell_header_level_format">Level %1$d</string>
    <string name="spell_list_empty">Your spellbook is empty!</string>

    <!-- Add/Edit Spell screen -->
    <string name="add_spell_header">Spell Information</string>
    <string name="add_spell_name_hint">Name</string>
    <string name="add_spell_level_hint">Level</string>
    <string name="add_spell_components_hint">Components</string>
    <string name="add_spell_casting_time_hint">Casting Time</string>
    <string name="add_spell_duration_hint">Duration</string>
    <string name="add_spell_range_hint">Range</string>
    <string name="add_spell_description_hint">Description</string>
    <string name="add_spell_add_button">Save</string>
    <string name="spell_item_range">Range:</string>
    <string name="spell_item_casting_time">Casting Time:</string>
    <string name="spell_item_components">Components:</string>
    <string name="spell_item_duration">Duration:</string>
    <string name="spell_item_description">Description:</string>
    <string name="spell_item_edit_button">Edit</string>
    <string name="spell_casting_summary_save_dc">Save DC:</string>
    <string name="spell_casting_summary_attack">Attack:</string>
    <string name="spell_casting_summary_ability">Ability:</string>
    <string name="spells_header_add_spell_level">Increase spell slots</string>
    <string-array name="spell_abilities">
        <item>INT</item>
        <item>WIS</item>
        <item>CHA</item>
    </string-array>

    <string-array name="classes">
        <item>Rogue</item>
    </string-array>

</resources>
