<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_character_info"
            android:checked="true"
            android:icon="@drawable/abc_ic_clear_mtrl_alpha"
            android:title="@string/nav_character_title"/>

        <item
            android:id="@+id/navigation_spells"
            android:checked="false"
            android:icon="@drawable/abc_ic_clear_mtrl_alpha"
            android:title="@string/nav_spells"/>

        <item
            android:id="@+id/navigation_equipment"
            android:checked="false"
            android:icon="@drawable/abc_ic_clear_mtrl_alpha"
            android:title="@string/nav_equipment"/>

        <!--<item-->
            <!--android:id="@+id/navigation_settings"-->
            <!--android:checked="false"-->
            <!--android:icon="@drawable/ic_drawer"-->
            <!--android:title="@string/nav_equipment"/>-->

    </group>

</menu>