<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_white"
                android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_add_spell_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brand_primary"
        android:clipToPadding="false"
        android:elevation="@dimen/appbar_elevation"
        android:theme="@style/ToolbarAppTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_add_spell_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.paragonfervour.charactersheet.widget.ListSubHeaderComponent
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerText="@string/add_spell_header"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_spell_level_layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_spell_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_spell_name_hint"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/add_spell_level_layout"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_spell_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_spell_level_hint"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_spell_casting_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_spell_casting_time_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_spell_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_spell_duration_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_spell_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_spell_range_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_spell_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/add_spell_description_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:scrollbars="vertical"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_spell_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/add_spell_add_button"
                android:textColor="@color/default_white"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>